# tap-greenhouse

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  test_config.json
.github/workflows/: ci_workflow.yml
tap_greenhouse/: __init__.py  client.py  streams.py  tap.py
tap_greenhouse/schemas/: __init__.py  activity_feed.py  applications.py  approval_flows.py  candidates.py  close_reasons.py  custom_fields.py  departments.py  eeoc.py  job_opening.py  job_posts.py  job_stages.py  jobs.py  list_approvals.py  list_demographic_questions.py  list_scorecards.py  list_sources.py  offer.py  offices.py  pending_approvals_for_user.py  prospect_pools.py  rejection_reasons.py  scheduled_interviews.py  tags.py  user_permissions.py  user_role.py  users.py
tests/: __init__.py  test_core.py
